--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -1,5 +1,82 @@
 {% extends "layout.html" %}
 {% block content %}
 
+         <!-- Main content -->
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="form-and-links-container col-sm-8 col-sm-offset-2">
+xTcR Insurgency $5 “Buy in” $150+ Prize Tournament!
+
+xTcR is hosting a “buy in” tournament on August 15th, 2015 @ 2:00pm EST. Before you sign up for this tournament it is important that you read and fully understand the rules and procedures of this tournament. xTcR reserves the right to change these rules and procedures any time to infer fair play.
+
+0.0 Definitions:
+0.1 Tournament Info: All date and time referred to in this document will be in reference with 2015, Eastern Standard Time.
+0.2 Tournament Manager: Tournament manager is someone chosen by xTcR to help manage the tournament. Tournament managers are who individuals should contact if any issues come up.
+0.3 Team Captain: Team captains are the individuals who pay for a whole team of five. They will be the captain of the individuals they sign up. Team captains will be in charge of communicating with tournament management, and managing their own team.
+0.4 Team representative: Team representative is someone assigned to a team made up of either partial team and individuals or just individuals. Team representatives will be in charge of helping communicate with tournament management, getting the general opinion of the team and conveying that properly to tournament management. If tournament management believes the team representative is either not doing these tasks or doing them improperly they reserve the right to replace the team representative at any time.
+0.5 Disqualification: Disqualification is being kicked out of the tournament. If an individual or team is disqualified after 12:00 am EST on August 13th they will not receive a refund.
+
+1.0 Buy in:
+For an individual to be entered into the tournament he or she must donate $5 or more to xTcR. Individuals signing up a whole team (5 players) will need to donate $20. Individuals can also sign up a partial team by donating $5 per player. As more players and teams sign up the prize will increase, making the win sweeter and the competition deadlier.
+1.1 Refunds: Whoever signs up will be allowed to cancel and receive a full refund if canceled by 12:00 am EST on August 13th.
+1.2 Winnings: All the winnings will go directly to the winning team. Money will be transferred to the winners within a week unless technical difficulties happen with the payment process winner has chosen for receiving the winnings. If the winning team is a pre-formed team, all winnings will go to the individual that signed up the team (team captain). If a team wins that is made up of a partially formed team and individuals, the team captain (the person who signed up the partially formed team) will receive ⅕ of the winnings for each individual he or she signed up and each anyone signed up as an individual will receive their ⅕ of the winnings. If a team full of individually signed up players wins, each player will receive ⅕ of the winnings. If for any reason a team has less than 5 players and wins, all the winnings will be divided out the by the number of players in the team.
+
+
+2.0 Individuals:
+For an individual to sign up he or she must donate $5 to xTcR. Individuals who have signed up are allowed to form teams at any time before the tournament has started. There will be a portion of time before the tournament for individuals who do not have a team to form teams. To form a team or partial team all individuals must agree on every team member, and a team representative will then be assigned (only to handle communications with the team and tournament managers). If an individual does not form or join a partially formed team the individual will be assigned to a team by a tournament manager. Once an individual has been assigned to a team and the team is formed a tournament manager will assign a team representative to handle communication with the team and tournament manager.
+2.1 Individuals names: Individuals who sign up will sign up using their steam ID, which is connected to an individual's account and will not change from account to account. Individuals are allowed to change their name up until 12:00 am EST on August 15th. If an individual changes their name after this time period the individual will be subject to disqualification from the tournament. individuals that are impersonating any player, group, or clan that the individual is not apart of will leave that individual subject to disqualification from the tournament.
+2.2 Custom files: Servers will be running pure, no skins, custom textures or models. If an individual is caught using any exploit to get out around the pure server for use custom files will be subject to disqualification by a tournament manager. Additionally being caught tampering with the insurgency or steam application making it run in any unnatural fashion will leave an individual subject to disqualification.
+2.3 Connection Tampering: Individuals are not allowed interfere with their connection quality or connection settings aside from normal tweaking if there are issues during a match. This rule includes automated tampering systems. This rule applies to all systems between an individual and the server, not just the individual's game client.
+2.4 Hacking: Hacking is defined by any major exploit or tampering to any aspect of the game causing an unfair advantage. Individuals caught hacking will be subject to disqualification without a refund.
+2.5 Suicide: Individuals that kill themselves on purpose will be subject to disqualification.
+2.6 Teamkilling: Individuals that team kill on purpose will be subject to getting both disqualified and permanently banned from all xTcR servers.
+
+3.0 Teams:
+For an individual to sign up a full team (5 players) they will have to donate $20. To sign up a partial team the individual must donate $5 per player. Whoever signs up the team for the tournament will be the team captain. Team captains have the right edit team information, add or remove members from the team, and remove the whole team from the tournament and receive a refund. The team captain must cancel the team before 12:00 am on August 13th to receive a refund for canceling.
+3.1 Team names: Teams are allowed to change their name at any date prior to 12:00 am EST on August 15th.
+3.2 Team rosters: The team captain will be fully responsible for the team roster, and reserves the right to make any changes to the roster. If your team is made up of players who signed up individually the roster will be handled by the tournament leader.
+3.3 Team captain change: Team captains reserve the right to step down as team captain and assign a new team captain. If a team captain steps down and does not assign a new team captain a tournament manager will work with the rest of the team to assign a new captain.
+3.4 Hacking: Any player on a pre-formed team caught hacking (defined in section 2.4) will result in the whole team being subject to disqualification without a refund.
+3.5 Teamkilling: Individuals that team kill on purpose on a pre-formed team are at the grace of the team captain. Team captain's reserve the right to ask that a player on their team be kicked out of the server, no matter the reason.
+
+4.0 Teamspeak:
+The tournament will be hosted in xTcR’s teamspeak, ts3.xtcr.net. The tournament will start at 2:00pm EST on August 15th. Individual and partly formed teams must be in teamspeak by 12:30 in order to allow time for teaming up, individuals and partly formed teams that fail to make this cutoff will be subject to disqualification. Full pre formed teams (team of 5 that signed up together) must be in xTcR’s teamspeak (ts3.xtcr.net) by 1:00pm EST on August 15th 2015, if one player is missing the whole team will be subject to disqualification. If there is a technical issue with teamspeak, xTcR reserves the right to move the time of the tournament to inser that everyone has the ability to be on time. xTcR recommends individuals attempting to team up before the event starts to come into xTcR’s teamspeak 30 minutes to an hour early to practice and team up.
+4.1 Verification: The teamspeak will include a tournament waiting room where you wait to be verified as a tournament participant, once verified a password will be given to the enter the tournament.
+4.2 Teaming up: There will be a lobby for individuals to meet and make teams together. If you have chosen your team you will head to the lobby called “Tournament management” and ask a tournament manager to come down and verify your team and assign you to a teamspeak lobby. Individuals are welcome to come into teamspeak for teaming up as early as 9:00 am, August 15th.
+4.3 During Match: Every team will be assigned to their own teamspeak lobby and should stay in this lobby during the whole tournament unless otherwise instructed by a tournament manager. An individual that fails to stay in assigned teamspeak they will be subject to disqualification by tournament managers. The exception to this rule is if an individual is having technical difficulties causing disconnections.
+
+5.0 Match:
+The games will be vanilla 5v5 firefight, first to win 9 rounds wins the game. All the servers will be running a custom theater file so all weapons and equipment available in the game is free to use.
+5.1 Maps: Everyone team will play the same map for the same round. As the round progresses it will cycle through the maps. If the tournament is still going after cycling through the maps, the cycle will restart. The maps will cycle in this order:
+Market
+Siege
+Uprising
+Ministry
+Sinjar
+Heights
+District
+Panj
+Heights
+Revolt
+Peak
+Station
+Vertically
+5.2 Classes: Classes available will be handled by the custom theater file. The classes will be as follows: Two “flanker” classes with sub machine guns, short assault rifles, and shotgun. Two assault classes with the standard assault rifles. And one sniper class with a bolt action sniper and a semiautomatic sniper.
+5.3 Warm up: Before a game begins both teams will be granted a 5:00 minute warm up, to skip the warm up both team captains must enter !ready into chat.
+5.4 Server: All servers will be hosted by xTcR in Houston, Texas. xTcR does not guarantee any ping levels of any kind. All ping levels are accepted but ping lower than 150 is recommended. If an individual feels the need to test their ping prior to signing up he or she can do so by connecting to our insurgency server (64.182.125.140:15000)
+5.6 Server Crash: If a server crashes during a game, the server will be reset and the game will be restarted immediately.
+5.7 Results: The results of a game will be documented by xTcR servers. Every team will have one chance to continue to the next round.
+5.8 Aborting/forfeiting: If a team aborts a game the win will default to the other team. If individuals abort or rage quits on a pre-formed team it is up to the team captain how to handle it. If an individual that signed up by themselves aborts or rage quits he or she will be subject to disqualification by tournament managers.
+
+6.0 Ban Policy:
+6.1 VAC Ban: Individuals with a VAC ban will be disqualified from the tournament. The tournament managers reserve the right to make any exceptions to this rule as they see fit.
+6.2 xTcR Ban: Individuals who have been banned by xTcR in the past are subject to being denied from joining the tournament. Individuals who have been banned from xTcR servers can appeal their ban at http://xtcr.net/forum/16-server-ban-appeals/. If the ban is appealed the individual will be allowed to enter into the tournament.
+6.3 Refusals: xTcR reserves the right to refuse any individual or team from joining the tournament. If a team or individual is refused from joining the tournament by 12:00am EST August 13th they will receive a full refund.
+
+</div>
+
+
+
 
 {% endblock %}
