--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -76,7 +76,7 @@ Vertically<br />
 6.3 Refusals: xTcR reserves the right to refuse any individual or team from joining the tournament. If a team or individual is refused from joining the tournament by 12:00am EST August 13th they will receive a full refund.<br />
 </p>
 
-
+<a href="/payment"><button>I Agree</button>
 
 
 {% endblock %}
