--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -8,7 +8,7 @@
             <div class="container">
   <h1>Pay to complete sign up</h1>
   <p>Complete payment below and you will be emailed a confirmation from Stripe and xTcR</p>
-   <form action="http://seeker.freebieservers.com/stripe2" method="post" id="stripeform">
+   <form action="/stripe2" method="post" id="stripeform">
 
     <input type='hidden' value='lo' name='asdf' id='asdf'>
 
