--- a/app/templates/fail.html
+++ b/app/templates/fail.html
@@ -11,7 +11,7 @@
 
                 <!-- Description -->
                 <div class="row">
-                    <p class="description col-sm-8 col-sm-offset-2">Your payment has failed! to try again click
+                    <p class="description col-sm-8 col-sm-offset-2">Your payment has failed! to try again click</p>
                         <p><a href="/payment"><button class="btn btn-info">Retry Payment</button></a></p>
                 </div>
                 <!-- /Description -->
