--- a/app/templates/fail.html
+++ b/app/templates/fail.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <p class="description col-sm-8 col-sm-offset-2">Your payment has failed! to try again click below</p>
                     <div align="center">
-                        <p><a href="/payment"><button class="btn btn-info">Retry Payment</button></a></p>
+                        <p class="description col-sm-8 col-sm-offset-2"><a href="/payment"><button class="btn btn-info">Retry Payment</button></a></p>
                         </div>
                 </div>
                 <!-- /Description -->
