--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -6,7 +6,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <div class="content">
             <div class="container">
-  <h1>Pay to complete sign up</h1>
+  <h1>Donate to complete sign up</h1>
   <p>Complete payment below and you will be emailed a confirmation from Stripe and xTcR</p>
    <form action="/stripe2" method="post" id="stripeform">
 
