--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -15,7 +15,7 @@
     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
             data-key="pk_test_6xcC58gJeTsY5KYPlmvhOE6O"
             data-description="xTcR Donation"
-            data-amount="{% if team == 1 %}2000{% else %}500{% endif %}"></script>
+            data-amount="{% if team == "1" %}500{% else %}2000{% endif %}"></script>
   </form>
 </div>
 
