--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -15,7 +15,7 @@
     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
             data-key="pk_live_MjOyhptp99TO2UUMypnJwckz"
             data-description="xTcR Donation"
-            data-amount="{% if team == "1" %}500{% else %}2000{% endif %}"></script>
+            data-amount="{% if team == 1 %}500{% else %}2000{% endif %}"></script>
   </form>
 </div>
 
