--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 
                 <!-- Description -->
                 <div class="row">
-                    <p class="description col-sm-8 col-sm-offset-2">Sign in below to enter the tournament for a chance to win the 150$ prize!</p>
+                    <p class="description col-sm-8 col-sm-offset-2">Sign in below to enter the tournament for a chance to win the ${{ count + 150 }} prize!</p>
                 </div>
                 <!-- /Description -->
             </div>
