--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -7,9 +7,9 @@
                 <div class="row">
                     <div class="form-and-links-container col-sm-8 col-sm-offset-2">
 
-<p>xTcR Insurgency $5 &ldquo;Buy in&rdquo; $150+ Prize Tournament!</p>
+<p>xTcR Insurgency $100 Prize Tournament!</p>
 
-<p>xTcR is hosting a &ldquo;buy in&rdquo; tournament on August 15th, 2015 @ 2:00pm EST. Before you sign up for this tournament it is important that you read and fully understand the rules and procedures of this tournament. xTcR reserves the right to change these rules and procedures any time to infer fair play.</p>
+<p>xTcR is hosting a tournament on September 19th, 2015 @ 2:00pm EST. Before you sign up for this tournament it is important that you read and fully understand the rules and procedures of this tournament. xTcR reserves the right to change these rules and procedures any time to infer fair play.</p>
 
 <p>0.0 Definitions:<br />
 0.1 Tournament Info: All date and time referred to in this document will be in reference with 2015, Eastern Standard Time.<br />
@@ -25,7 +25,7 @@ For an individual to be entered into the tournament he or she must donate $5 or 
 
 <p>
 2.0 Individuals:<br />
-For an individual to sign up he or she must donate $5 to xTcR. Individuals who have signed up are allowed to form teams at any time before the tournament has started. There will be a portion of time before the tournament for individuals who do not have a team to form teams. To form a team or partial team all individuals must agree on every team member, and a team representative will then be assigned (only to handle communications with the team and tournament managers). If an individual does not form or join a partially formed team the individual will be assigned to a team by a tournament manager. Once an individual has been assigned to a team and the team is formed a tournament manager will assign a team representative to handle communication with the team and tournament manager.<br />
+Individuals who have signed up are allowed to form teams at any time before the tournament has started. There will be a portion of time before the tournament for individuals who do not have a team to form teams. To form a team or partial team all individuals must agree on every team member, and a team representative will then be assigned (only to handle communications with the team and tournament managers). If an individual does not form or join a partially formed team the individual will be assigned to a team by a tournament manager. Once an individual has been assigned to a team and the team is formed a tournament manager will assign a team representative to handle communication with the team and tournament manager.<br />
 2.1 Individuals names: Individuals who sign up will sign up using their steam ID, which is connected to an individual's account and will not change from account to account. Individuals are allowed to change their name up until 12:00 am EST on August 15th. If an individual changes their name after this time period the individual will be subject to disqualification from the tournament. individuals that are impersonating any player, group, or clan that the individual is not apart of will leave that individual subject to disqualification from the tournament.<br />
 2.2 Custom files: Servers will be running pure, no skins, custom textures or models. If an individual is caught using any exploit to get out around the pure server for use custom files will be subject to disqualification by a tournament manager. Additionally being caught tampering with the insurgency or steam application making it run in any unnatural fashion will leave an individual subject to disqualification.<br />
 2.3 Connection Tampering: Individuals are not allowed interfere with their connection quality or connection settings aside from normal tweaking if there are issues during a match. This rule includes automated tampering systems. This rule applies to all systems between an individual and the server, not just the individual's game client.<br />
